--- a/css/styles.css
+++ b/css/styles.css
@@ -82,13 +82,25 @@ nav {
 }
 .header-contacts-bar {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   padding: 0;
   gap: 3.12%;
   flex-grow: 1;
   width: auto;
-  margin-left: 23.31%;
+  margin-left: 390px;
   margin-right: 0;
+}
+.header-contacts-element {
+  display: flex;
+  align-items: center;
+}
+.icon-contacts {
+  margin-right: 10px;
+  stroke: var(--text-color);
+}
+.icon-contacts:hover {
+  stroke: var(--active-color);
+  stroke-opacity: 1;
 }
 .headermenu-item {
   text-decoration: none;
