--- a/css/styles.css
+++ b/css/styles.css
@@ -90,17 +90,13 @@ nav {
   margin-left: 390px;
   margin-right: 0;
 }
-.header-contacts-element {
-  display: flex;
-  align-items: center;
-}
+
 .icon-contacts {
   margin-right: 10px;
   stroke: var(--text-color);
 }
 .icon-contacts:hover {
   stroke: var(--active-color);
-  stroke-opacity: 1;
 }
 .headermenu-item {
   text-decoration: none;
@@ -115,6 +111,8 @@ nav {
   color: var(--active-color);
 }
 .header-contacts {
+  display: flex;
+  align-items: center;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.026rem;
@@ -135,6 +133,7 @@ nav {
 /* start of studio */
 .main-div {
   background-color: var(--main-background-color);
+  background-image: "./images/";
   height: 600px;
   display: flex;
   justify-content: center;
